Fixed spacing of buttons on add new inventory item form on all breakpoints

--- a/src/components/InvItem/InvItem.scss
+++ b/src/components/InvItem/InvItem.scss
@@ -85,7 +85,8 @@
         }
 
         &--icon {
-
+            cursor: pointer;
+            
             @include tablet {
                 padding-left: 1rem;
             }
